[package]
name = "pgin"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/luatil/pgin"

[dependencies]
clap = { version = "4", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
